--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#8a2be2">
     <style>
         :root {
             --bg-body: #0a0a0a;
@@ -383,6 +384,9 @@
                 btn.disabled = false;
             }
         };
+        if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js');
+}
     </script>
 </body>
 </html>
